--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="columns-wrapper">
         <div class="about-title">
-          <div class="company-name">ECOPRO-AV</div>
+          <div class="company-name">ES-AV</div>
           <div class="company-description">Крупнейший российский <br>дистрибьютор ProAV-оборудования <br>и эксперт на рынке мультимедийных <br>решений</div>
         </div>
         <div class="columns">
