--- a/contacts.html
+++ b/contacts.html
@@ -35,7 +35,7 @@
           <div class="contacts-item__ellipse">
             <img src="/images/contacts-ellipse-left.png" alt="">
           </div>
-          <span class="map-btn">Схема проезда</span>
+          <a href="#map-section" class="map-btn">Схема проезда</a>
         </div>
         <div class="contacts-item contacts-item-right">
           <div class="contacts-item__title">Наш склад</div>
@@ -56,7 +56,7 @@
           <div class="contacts-item__ellipse">
             <img src="/images/contacts-ellipse-right.png" alt="">
           </div>
-          <span class="map-btn">Схема проезда</span>
+          <a href="#map-section" class="map-btn">Схема проезда</a>
         </div>
       </div>
   </div>
