--- a/expertise.html
+++ b/expertise.html
@@ -17,7 +17,7 @@
         <div class="title-wrapper">
           <div class="page-title">Экспертиза</div>
           <div class="expertise-subtitle">Наш статус ИТ–эксперта на рынке — это опыт и компетенции наших сотрудников</div>
-          <div class="expertise-description">Сертифицированные специалисты ECOPRO-AV работают по всей России – они доступны для дилеров и их заказчиков как в Москве, так и далеко за ее пределами. Они участвуют в пресейле и продажах, генерации потребностей, инжиниринге.</div>
+          <div class="expertise-description">Сертифицированные специалисты ES-AV работают по всей России – они доступны для дилеров и их заказчиков как в Москве, так и далеко за ее пределами. Они участвуют в пресейле и продажах, генерации потребностей, инжиниринге.</div>
         </div>
         <div class="expertise-image">
           <img src="/images/expertise.jpg" alt="">
@@ -31,15 +31,15 @@
       <div class="experts">
         <div class="experts-item">
           <div class="experts-item__title">680+ Специалистов</div>
-          <div class="experts-item__description">Сертифицированные специалисты ECOPRO-AV работают по всей России – они доступны для дилеров и их заказчиков как в Москве, так и далеко за ее пределами. Они участвуют в пресейле и продажах, генерации потребностей, инжиниринге</div>
+          <div class="experts-item__description">Сертифицированные специалисты ES-AV работают по всей России – они доступны для дилеров и их заказчиков как в Москве, так и далеко за ее пределами. Они участвуют в пресейле и продажах, генерации потребностей, инжиниринге</div>
         </div>
         <div class="experts-item">
           <div class="experts-item__title">680+ Специалистов</div>
-          <div class="experts-item__description">Их опыт охватывает все этапы создания современных аудиовизуальных комплексов, от первоначальной консультации и разработки концепции до финальной настройки и ввода в эксплуатацию. Благодаря глубокому знанию оборудования и технологий, специалисты ECOPRO-AV способны предложить оптимальные решения, отвечающие самым высоким требованиям и бюджетным ограничениям.</div>
+          <div class="experts-item__description">Их опыт охватывает все этапы создания современных аудиовизуальных комплексов, от первоначальной консультации и разработки концепции до финальной настройки и ввода в эксплуатацию. Благодаря глубокому знанию оборудования и технологий, специалисты ES-AV способны предложить оптимальные решения, отвечающие самым высоким требованиям и бюджетным ограничениям.</div>
         </div>
         <div class="experts-item">
           <div class="experts-item__title">680+ Специалистов</div>
-          <div class="experts-item__description">Важным аспектом их работы является поддержка дилеров. Они предоставляют им необходимые консультации, техническую документацию и обучение, что позволяет дилерам повысить свою компетентность и предлагать своим клиентам решения премиум-класса. Кроме того, специалисты ECOPRO-AV активно участвуют в маркетинговых мероприятиях.</div>
+          <div class="experts-item__description">Важным аспектом их работы является поддержка дилеров. Они предоставляют им необходимые консультации, техническую документацию и обучение, что позволяет дилерам повысить свою компетентность и предлагать своим клиентам решения премиум-класса. Кроме того, специалисты ES-AV активно участвуют в маркетинговых мероприятиях.</div>
         </div>
       </div>
     </div>
