--- a/parts/footer.html
+++ b/parts/footer.html
@@ -41,7 +41,7 @@
       </div>
     </div>
     <div class="footer-text">
-      <div class="text">Все права защищены. Названия компаний и продуктов, упомянутые здесь, являются зарегистрированными товарными знаками соответствующих правообладателей. Не допускается полное или частичное копирование, воспроизведение, распространение или использование любым иным способом размещенных на сайте изображений и материалов без предварительного письменного разрешения ECOPRO-AV.</div>
+      <div class="text">Все права защищены. Названия компаний и продуктов, упомянутые здесь, являются зарегистрированными товарными знаками соответствующих правообладателей. Не допускается полное или частичное копирование, воспроизведение, распространение или использование любым иным способом размещенных на сайте изображений и материалов без предварительного письменного разрешения ES-AV.</div>
       <div class="required-links">
         <a href="/privacy-policy.html" class="link">Политика конфиденциальности</a>
         <a href="/agreement.html" class="link">Согласие на обработку персональных данных</a>
@@ -50,7 +50,7 @@
     </div>
     <div class="footer-bottom">
       <div class="info">
-        <div class="copyright">Copyright © ECOPRO-AV</div>
+        <div class="copyright">Copyright © ES-AV</div>
         <div id="current-year"></div>
       </div>
       <div class="developers">
