--- a/index.html
+++ b/index.html
@@ -2,14 +2,22 @@
 
 <div class="main-section section">
   <div class="container">
-    <div class="main-banner">
-      <div class="main-banner-text">
-        <div class="main-banner-title">Телевизор Samsung QLED</div>
-        <div class="main-banner-subtitle">Высокое качество в 8К</div>
-        <a href="catalog.html" class="catalog-btn">
-          <span class="catalog-btn__text">Перейти в каталог</span>
-          <img src="/images/circle-right-down.png" class="catalog-btn__image" alt="">
-        </a>
+    <div class="main-banner-wrapper">
+      <div class="main-banner">
+        <div class="main-banner-text">
+          <div class="main-banner-title">Телевизор Samsung QLED</div>
+          <div class="main-banner-subtitle">Высокое качество в 8К</div>
+          <a href="catalog.html" class="catalog-btn">
+            <span class="catalog-btn__text">Перейти в каталог</span>
+            <img src="/images/circle-right-down.png" class="catalog-btn__image" alt="">
+          </a>
+        </div>
+        <div class="main-banner-image hidden-desktop">
+          <img src="/images/main-banner-image.png" alt="">
+        </div>
+      </div>
+      <div class="main-banner-image hidden-mobile">
+        <img src="/images/main-banner-image.png" alt="">
       </div>
     </div>
   </div>
