--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
             <div class="directions-item__image">
               <img src="/images/directions-distribution.jpg" alt="">
             </div>
-            <div class="directions-item__filter"></div>
+            <div class="image-filter"></div>
           </div>
           <div class="directions-item__title">Дистрибуция</div>
           <div class="directions-item__description">Это может быть фраза из какого-то литературного произведения</div>
@@ -63,7 +63,7 @@
             <div class="directions-item__image">
               <img src="/images/directions-install.jpg" alt="">
             </div>
-            <div class="directions-item__filter"></div>
+            <div class="image-filter"></div>
           </div>
           <div class="directions-item__title">Установка</div>
           <div class="directions-item__description">Фраза из диалога каких-то людей, либо вообще вымышленная фраза</div>
@@ -73,7 +73,7 @@
             <div class="directions-item__image">
               <img src="/images/directions-support.jpg" alt="">
             </div>
-            <div class="directions-item__filter"></div>
+            <div class="image-filter"></div>
           </div>
           <div class="directions-item__title">Техподдержка</div>
           <div class="directions-item__description">Чаще все такой генератор используют в каких-либо коллективных играх</div>
