--- a/download.html
+++ b/download.html
@@ -1,7 +1,46 @@
 <!--#include virtual="/parts/header.html" -->
 
-<div class="container">
-  <p>скачать</p>
+<div class="breadcrumbs">
+  <div class="container">
+    <div class="parent">
+      <a href="/">Главная</a>
+    </div>
+    <div class="separator">/</div>
+    <div class="active">Скачать</div>
+  </div>
 </div>
+
+<div class="download-page">
+  <div class="container">
+    <div class="page-title">Скачать</div>
+    <div class="downloads">
+      <div class="downloads-item">
+        <div class="downloads-item__title">Лицензия</div>
+        <a href="#" class="downloads-item__btn" target="_blank">
+          <img src="/images/download.png" class="downloads-item__btn-image" alt="">
+          <span class="downloads-item__btn-text">Скачать</span>
+        </a>
+      </div>
+      <div class="downloads-item">
+        <div class="downloads-item__title">Инструкция по установке</div>
+        <a href="#" class="downloads-item__btn" target="_blank">
+          <img src="/images/download.png" class="downloads-item__btn-image" alt="">
+          <span class="downloads-item__btn-text">Скачать</span>
+        </a>
+      </div>
+      <div class="downloads-item">
+        <div class="downloads-item__title">Руководство</div>
+        <a href="#" class="downloads-item__btn" target="_blank">
+          <img src="/images/download.png" class="downloads-item__btn-image" alt="">
+          <span class="downloads-item__btn-text">Скачать</span>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script>
+  const topMenuItemActive = 5;
+</script>
 
 <!--#include virtual="/parts/footer.html" -->
