--- a/events.html
+++ b/events.html
@@ -20,10 +20,10 @@
           <div class="ep-item__image">
             <img src="/images/temp-events-image1.jpg" alt="">
           </div>
-          <div class="ep-item__date">28.02.2024</div>
-          <div class="ep-item__type hidden-mobile">Статья</div>
-          <div class="ep-item__time">20:00 мск</div>
-          <div class="ep-item__filter"></div>
+          <div class="enws-date ep-item__date">28.02.2024</div>
+          <div class="enws-type ep-item__type hidden-mobile">Статья</div>
+          <div class="enws-time ep-item__time">20:00 мск</div>
+          <div class="image-filter"></div>
         </div>
         <div class="ep-item__content">
           <div class="ep-item__title">Где и как продвигать бизнес в 2025 году</div>
@@ -39,10 +39,10 @@
           <div class="ep-item__image">
             <img src="/images/temp-events-image2.jpg" alt="">
           </div>
-          <div class="ep-item__date">28.02.2024</div>
-          <div class="ep-item__type hidden-mobile">Статья</div>
-          <div class="ep-item__time">20:00 мск</div>
-          <div class="ep-item__filter"></div>
+          <div class="enws-date ep-item__date">28.02.2024</div>
+          <div class="enws-type ep-item__type hidden-mobile">Статья</div>
+          <div class="enws-time ep-item__time">20:00 мск</div>
+          <div class="image-filter"></div>
         </div>
         <div class="ep-item__content">
           <div class="ep-item__title">Конференция по процессной аналитике</div>
@@ -58,10 +58,10 @@
           <div class="ep-item__image">
             <img src="/images/temp-events-image3.jpg" alt="">
           </div>
-          <div class="ep-item__date">28.02.2024</div>
-          <div class="ep-item__type hidden-mobile">Статья</div>
-          <div class="ep-item__time">20:00 мск</div>
-          <div class="ep-item__filter"></div>
+          <div class="enws-date ep-item__date">28.02.2024</div>
+          <div class="enws-type ep-item__type hidden-mobile">Статья</div>
+          <div class="enws-time ep-item__time">20:00 мск</div>
+          <div class="image-filter"></div>
         </div>
         <div class="ep-item__content">
           <div class="ep-item__title">Цифровые решения для промышленных предприятий</div>
@@ -77,10 +77,10 @@
           <div class="ep-item__image">
             <img src="/images/temp-events-image4.jpg" alt="">
           </div>
-          <div class="ep-item__date">28.02.2024</div>
-          <div class="ep-item__type hidden-mobile">Статья</div>
-          <div class="ep-item__time">20:00 мск</div>
-          <div class="ep-item__filter"></div>
+          <div class="enws-date ep-item__date">28.02.2024</div>
+          <div class="enws-type ep-item__type hidden-mobile">Статья</div>
+          <div class="enws-time ep-item__time">20:00 мск</div>
+          <div class="image-filter"></div>
         </div>
         <div class="ep-item__content">
           <div class="ep-item__title">Рекламный хаб Северной столицы</div>
@@ -96,10 +96,10 @@
           <div class="ep-item__image">
             <img src="/images/temp-events-image5.jpg" alt="">
           </div>
-          <div class="ep-item__date">28.02.2024</div>
-          <div class="ep-item__type hidden-mobile">Статья</div>
-          <div class="ep-item__time">20:00 мск</div>
-          <div class="ep-item__filter"></div>
+          <div class="enws-date ep-item__date">28.02.2024</div>
+          <div class="enws-type ep-item__type hidden-mobile">Статья</div>
+          <div class="enws-time ep-item__time">20:00 мск</div>
+          <div class="image-filter"></div>
         </div>
         <div class="ep-item__content">
           <div class="ep-item__title">Двенадцатая конференция «Корпоративное планирование и прогнозирование»</div>
@@ -115,10 +115,10 @@
           <div class="ep-item__image">
             <img src="/images/temp-events-image6.jpg" alt="">
           </div>
-          <div class="ep-item__date">28.02.2024</div>
-          <div class="ep-item__type hidden-mobile">Статья</div>
-          <div class="ep-item__time">20:00 мск</div>
-          <div class="ep-item__filter"></div>
+          <div class="enws-date ep-item__date">28.02.2024</div>
+          <div class="enws-type ep-item__type hidden-mobile">Статья</div>
+          <div class="enws-time ep-item__time">20:00 мск</div>
+          <div class="image-filter"></div>
         </div>
         <div class="ep-item__content">
           <div class="ep-item__title">IX Всероссийская Конференция HR-АНАЛИТИКА</div>
