--- a/news-detail.html
+++ b/news-detail.html
@@ -14,9 +14,14 @@
   </div>
 </div>
 
-<div class="ne-detail-page">
+<div class="ne-detail-page ep-page">
   <div class="container">
     <div class="ne-detail-title">Samsung QH98C – всегда в центре внимания аудитории</div>
+    <div class="ne-detail-info">
+      <div class="enws-date ne-detail-info__date">28.02.2024</div>
+      <div class="enws-type ne-detail-info__type">статья</div>
+      <div class="enws-time ne-detail-info__time">20:00 мск</div>
+    </div>
     <div class="ne-detail-content">
       <div class="ne-detail-image">
         <img src="/images/temp-news-image6.jpg" alt="">
