--- a/parts/header.html
+++ b/parts/header.html
@@ -24,7 +24,10 @@
           <img src="/images/circle-right-down.png" class="catalog-btn__image" alt="">
         </a>
         <form class="search-form">
-          <input type="text" name="search_query" class="search-input " placeholder="Поиск по каталогу">
+          <div class="search-input-wrapper">
+            <input type="text" name="search_query" class="search-input " placeholder="Поиск по каталогу">
+            <div class="search-close"></div>
+          </div>
           <button type="submit" class="search-submit-btn hidden-mobile">
             <img src="/images/search-lens.png" alt="">
           </button>
@@ -55,7 +58,7 @@
           <a href="/publications.html" class="menu-item__link">Публикации</a>
         </div>
         <div class="menu-item">
-          <a href="#" class="menu-item__link">Скачать</a>
+          <a href="/download.html" class="menu-item__link">Скачать</a>
         </div>
         <div class="menu-item">
           <a href="/expertise.html" class="menu-item__link">Экспертиза</a>
@@ -64,7 +67,7 @@
           <a href="/about.html" class="menu-item__link">О нас</a>
         </div>
         <div class="menu-item">
-          <a href="#" class="menu-item__link">Стать партнером</a>
+          <a href="/partnership.html" class="menu-item__link">Стать партнером</a>
         </div>
         <div class="menu-item">
           <a href="/contacts.html" class="menu-item__link">Контакты</a>
