--- a/product.html
+++ b/product.html
@@ -245,6 +245,11 @@
       </div>
     </div>
 
+    <a href="#" class="product-download-btn" target="_blank">
+      <span class="product-download-btn__text">Скачать PDF</span>
+      <img src="/images/circle-right-down.png" class="product-download-btn__image" alt="">
+    </a>
+
   </div>
 
   <div class="recommend-products-section">
