--- a/publications.html
+++ b/publications.html
@@ -10,7 +10,6 @@
   </div>
 </div>
 
-
 <div class="ep-page publicaitons-page">
   <div class="container">
     <div class="page-title">Публикации</div>
@@ -24,7 +23,7 @@
           <div class="ep-item__date">28.02.2024</div>
           <div class="ep-item__type hidden-mobile">Статья</div>
           <div class="ep-item__time">20:00 мск</div>
-          <div class="ep-item__filter"></div>
+          <div class="image-filter"></div>
         </div>
         <div class="ep-item__content">
           <div class="ep-item__title">Как прийти к идеальному NGFW?</div>
@@ -43,7 +42,7 @@
           <div class="ep-item__date">28.02.2024</div>
           <div class="ep-item__type hidden-mobile">Статья</div>
           <div class="ep-item__time">20:00 мск</div>
-          <div class="ep-item__filter"></div>
+          <div class="image-filter"></div>
         </div>
         <div class="ep-item__content">
           <div class="ep-item__title">Импортонезависимость ИТ-отрасли и задачи кибербезопасности</div>
@@ -62,7 +61,7 @@
           <div class="ep-item__date">28.02.2024</div>
           <div class="ep-item__type hidden-mobile">Статья</div>
           <div class="ep-item__time">20:00 мск</div>
-          <div class="ep-item__filter"></div>
+          <div class="image-filter"></div>
         </div>
         <div class="ep-item__content">
           <div class="ep-item__title">Центры обработки данных (ЦОДы) и облачные решения. Сохранение и защищенное использование больших данных</div>
@@ -81,7 +80,7 @@
           <div class="ep-item__date">28.02.2024</div>
           <div class="ep-item__type hidden-mobile">Статья</div>
           <div class="ep-item__time">20:00 мск</div>
-          <div class="ep-item__filter"></div>
+          <div class="image-filter"></div>
         </div>
         <div class="ep-item__content">
           <div class="ep-item__title">Российские системы управления информацией о безопасности и управления событиями безопасности</div>
@@ -100,7 +99,7 @@
           <div class="ep-item__date">28.02.2024</div>
           <div class="ep-item__type hidden-mobile">Статья</div>
           <div class="ep-item__time">20:00 мск</div>
-          <div class="ep-item__filter"></div>
+          <div class="image-filter"></div>
         </div>
         <div class="ep-item__content">
           <div class="ep-item__title">Вопросы международной информационной безопасности. Экономика данных и обеспечение доверия на международном уровне</div>
@@ -119,7 +118,7 @@
           <div class="ep-item__date">28.02.2024</div>
           <div class="ep-item__type hidden-mobile">Статья</div>
           <div class="ep-item__time">20:00 мск</div>
-          <div class="ep-item__filter"></div>
+          <div class="image-filter"></div>
         </div>
         <div class="ep-item__content">
           <div class="ep-item__title">Перспективные технологии обеспечения информационной безопасности</div>
@@ -161,12 +160,8 @@
   </div>
 </div>
 
-
-
-
 <script>
   const topMenuItemActive = 4;
 </script>
-
 
 <!--#include virtual="/parts/footer.html" -->
