--- a/expertise.html
+++ b/expertise.html
@@ -26,7 +26,7 @@
     </div>
   </div>
 
-  <div class="experts-section section">
+  <div class="expr-section experts-section section">
     <div class="container">
       <div class="experts">
         <div class="experts-item">
