--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
       <div class="solutions-item solutions-item-slim solutions-item-blue">
         <div class="solutions-item__title">Креативный контент</div>
         <div class="solutions-item__description">Разрабатываем решения для основных типовых объектов</div>
-        <a href="catalog.html" class="solutions-btn">
+        <a href="catalog.html" class="solutions-arrow">
           <img src="/images/circle-right-down.png" class="solutions-btn__image" alt="">
         </a>
         <div class="solutions-item__image">
@@ -282,7 +282,7 @@
       <div class="solutions-item solutions-item-slim solutions-item-black">
         <div class="solutions-item__title">Типовые проекты</div>
         <div class="solutions-item__description">Разрабатываем решения для основных типовых объектов</div>
-        <a href="catalog.html" class="solutions-btn">
+        <a href="catalog.html" class="solutions-arrow">
           <img src="/images/circle-right-down.png" class="solutions-btn__image" alt="">
         </a>
         <div class="solutions-item__image">
@@ -292,7 +292,7 @@
       <div class="solutions-item solutions-item-slim solutions-item-blue">
         <div class="solutions-item__title">Типовые проекты</div>
         <div class="solutions-item__description">Разрабатываем решения для основных типовых объектов</div>
-        <a href="catalog.html" class="solutions-btn">
+        <a href="catalog.html" class="solutions-arrow">
           <img src="/images/circle-right-down.png" class="solutions-btn__image" alt="">
         </a>
         <div class="solutions-item__image">
@@ -352,9 +352,9 @@
           <div class="news-item__image">
             <img src="/images/temp-news-image1.jpg" alt="">
           </div>
-          <div class="news-item__filter"></div>
-          <div class="news-item__date">28.02.2024</div>
-          <div class="news-item__type">статья</div>
+          <div class="image-filter"></div>
+          <div class="enws-date news-item__date">28.02.2024</div>
+          <div class="enws-type news-item__type">статья</div>
           <a href="/news-detail.html" class="news-item__btn">
             <span class="news-item__text">Читать новость</span>
             <img src="/images/circle-right-down.png" class="news-item__image" alt="">
@@ -367,9 +367,9 @@
           <div class="news-item__image">
             <img src="/images/temp-news-image2.jpg" alt="">
           </div>
-          <div class="news-item__filter"></div>
-          <div class="news-item__date">28.02.2024</div>
-          <div class="news-item__type">статья</div>
+          <div class="image-filter"></div>
+          <div class="enws-date news-item__date">28.02.2024</div>
+          <div class="enws-type news-item__type">статья</div>
           <a href="/news-detail.html" class="news-item__btn">
             <span class="news-item__text">Читать новость</span>
             <img src="/images/circle-right-down.png" class="news-item__image" alt="">
@@ -382,9 +382,9 @@
           <div class="news-item__image">
             <img src="/images/temp-news-image3.jpg" alt="">
           </div>
-          <div class="news-item__filter"></div>
-          <div class="news-item__date">28.02.2024</div>
-          <div class="news-item__type">статья</div>
+          <div class="image-filter"></div>
+          <div class="enws-date news-item__date">28.02.2024</div>
+          <div class="enws-type news-item__type">статья</div>
           <a href="/news-detail.html" class="news-item__btn">
             <span class="news-item__text">Читать новость</span>
             <img src="/images/circle-right-down.png" class="news-item__image" alt="">
@@ -403,7 +403,7 @@
             <div class="news-item__image">
               <img src="/images/temp-news-image1.jpg" alt="">
             </div>
-            <div class="news-item__filter"></div>
+            <div class="image-filter"></div>
             <div class="news-item__date">28.02.2024</div>
             <div class="news-item__type">статья</div>
             <a href="/news-detail.html" class="news-item__btn">
@@ -418,7 +418,7 @@
             <div class="news-item__image">
               <img src="/images/temp-news-image2.jpg" alt="">
             </div>
-            <div class="news-item__filter"></div>
+            <div class="image-filter"></div>
             <div class="news-item__date">28.02.2024</div>
             <div class="news-item__type">статья</div>
             <a href="/news-detail.html" class="news-item__btn">
@@ -433,7 +433,7 @@
             <div class="news-item__image">
               <img src="/images/temp-news-image3.jpg" alt="">
             </div>
-            <div class="news-item__filter"></div>
+            <div class="image-filter"></div>
             <div class="news-item__date">28.02.2024</div>
             <div class="news-item__type">статья</div>
             <a href="/news-detail.html" class="news-item__btn">
@@ -472,7 +472,7 @@
         <div class="events-item__image">
           <img src="/images/temp-events-image1.jpg" alt="">
         </div>
-        <div class="events-item__filter"></div>
+        <div class="image-filter"></div>
         <a href="/events-detail.html" class="full-link"></a>
       </div>
       <div class="events-item">
@@ -480,7 +480,7 @@
         <div class="events-item__image">
           <img src="/images/temp-events-image2.jpg" alt="">
         </div>
-        <div class="events-item__filter"></div>
+        <div class="image-filter"></div>
         <a href="/events-detail.html" class="full-link"></a>
       </div>
       <div class="events-item">
@@ -488,7 +488,7 @@
         <div class="events-item__image">
           <img src="/images/temp-events-image3.jpg" alt="">
         </div>
-        <div class="events-item__filter"></div>
+        <div class="image-filter"></div>
         <a href="/events-detail.html" class="full-link"></a>
       </div>
       <div class="events-item">
@@ -496,7 +496,7 @@
         <div class="events-item__image">
           <img src="/images/temp-events-image4.jpg" alt="">
         </div>
-        <div class="events-item__filter"></div>
+        <div class="image-filter"></div>
         <a href="/events-detail.html" class="full-link"></a>
       </div>
     </div>
@@ -510,7 +510,7 @@
           <div class="events-item__image">
             <img src="/images/temp-events-image1.jpg" alt="">
           </div>
-          <div class="events-item__filter"></div>
+          <div class="image-filter"></div>
           <a href="/events-detail.html" class="full-link"></a>
         </div>
         <div class="events-item swiper-slide">
@@ -518,7 +518,7 @@
           <div class="events-item__image">
             <img src="/images/temp-events-image2.jpg" alt="">
           </div>
-          <div class="events-item__filter"></div>
+          <div class="image-filter"></div>
           <a href="/events-detail.html" class="full-link"></a>
         </div>
         <div class="events-item swiper-slide">
@@ -526,7 +526,7 @@
           <div class="events-item__image">
             <img src="/images/temp-events-image3.jpg" alt="">
           </div>
-          <div class="events-item__filter"></div>
+          <div class="image-filter"></div>
           <a href="/events-detail.html" class="full-link"></a>
         </div>
         <div class="events-item swiper-slide">
@@ -534,7 +534,7 @@
           <div class="events-item__image">
             <img src="/images/temp-events-image4.jpg" alt="">
           </div>
-          <div class="events-item__filter"></div>
+          <div class="image-filter"></div>
           <a href="/events-detail.html" class="full-link"></a>
         </div>
       </div>
