--- a/news.html
+++ b/news.html
@@ -20,9 +20,9 @@
             <div class="news-item__image">
               <img src="/images/temp-news-image1.jpg" alt="">
             </div>
-            <div class="news-item__filter"></div>
-            <div class="news-item__date">28.02.2024</div>
-            <div class="news-item__type">статья</div>
+            <div class="image-filter"></div>
+            <div class="enws-date news-item__date">28.02.2024</div>
+            <div class="enws-type news-item__type">статья</div>
             <a href="/news-detail.html" class="news-item__btn">
               <span class="news-item__text">Читать новость</span>
               <img src="/images/circle-right-down.png" class="news-item__image" alt="">
@@ -35,9 +35,9 @@
             <div class="news-item__image">
               <img src="/images/temp-news-image2.jpg" alt="">
             </div>
-            <div class="news-item__filter"></div>
-            <div class="news-item__date">28.02.2024</div>
-            <div class="news-item__type">статья</div>
+            <div class="image-filter"></div>
+            <div class="enws-date news-item__date">28.02.2024</div>
+            <div class="enws-type news-item__type">статья</div>
             <a href="/news-detail.html" class="news-item__btn">
               <span class="news-item__text">Читать новость</span>
               <img src="/images/circle-right-down.png" class="news-item__image" alt="">
@@ -50,9 +50,9 @@
             <div class="news-item__image">
               <img src="/images/temp-news-image3.jpg" alt="">
             </div>
-            <div class="news-item__filter"></div>
-            <div class="news-item__date">28.02.2024</div>
-            <div class="news-item__type">статья</div>
+            <div class="image-filter"></div>
+            <div class="enws-date news-item__date">28.02.2024</div>
+            <div class="enws-type news-item__type">статья</div>
             <a href="/news-detail.html" class="news-item__btn">
               <span class="news-item__text">Читать новость</span>
               <img src="/images/circle-right-down.png" class="news-item__image" alt="">
@@ -65,9 +65,9 @@
             <div class="news-item__image">
               <img src="/images/temp-news-image4.jpg" alt="">
             </div>
-            <div class="news-item__filter"></div>
-            <div class="news-item__date">28.02.2024</div>
-            <div class="news-item__type">статья</div>
+            <div class="image-filterr"></div>
+            <div class="enws-date news-item__date">28.02.2024</div>
+            <div class="enws-type news-item__type">статья</div>
             <a href="/news-detail.html" class="news-item__btn">
               <span class="news-item__text">Читать новость</span>
               <img src="/images/circle-right-down.png" class="news-item__image" alt="">
@@ -80,9 +80,9 @@
             <div class="news-item__image">
               <img src="/images/temp-news-image5.jpg" alt="">
             </div>
-            <div class="news-item__filter"></div>
-            <div class="news-item__date">28.02.2024</div>
-            <div class="news-item__type">статья</div>
+            <div class="image-filter"></div>
+            <div class="enws-date news-item__date">28.02.2024</div>
+            <div class="enws-type news-item__type">статья</div>
             <a href="/news-detail.html" class="news-item__btn">
               <span class="news-item__text">Читать новость</span>
               <img src="/images/circle-right-down.png" class="news-item__image" alt="">
@@ -95,9 +95,9 @@
             <div class="news-item__image">
               <img src="/images/temp-news-image6.jpg" alt="">
             </div>
-            <div class="news-item__filter"></div>
-            <div class="news-item__date">28.02.2024</div>
-            <div class="news-item__type">статья</div>
+            <div class="image-filter"></div>
+            <div class="enws-date news-item__date">28.02.2024</div>
+            <div class="enws-type news-item__type">статья</div>
             <a href="/news-detail.html" class="news-item__btn">
               <span class="news-item__text">Читать новость</span>
               <img src="/images/circle-right-down.png" class="news-item__image" alt="">
