--- a/parts/footer.html
+++ b/parts/footer.html
@@ -126,7 +126,7 @@
         <a href="/publications.html" class="menu-item__link">Публикации</a>
       </li>
       <li class="menu-item" class="menu-item__link">
-        <a href="#">Скачать</a>
+        <a href="/download.html">Скачать</a>
       </li>
       <li class="menu-item">
         <a href="/expertise.html" class="menu-item__link">Экспертиза</a>
@@ -135,7 +135,7 @@
         <a href="/about.html" class="menu-item__link">О нас</a>
       </li>
       <li class="menu-item">
-        <a href="#" class="menu-item__link">Стать партнером</a>
+        <a href="/partnership.html" class="menu-item__link">Стать партнером</a>
       </li>
       <li class="menu-item">
         <a href="/contacts.html" class="menu-item__link">Контакты</a>
