News subscribe form

--- a/about.html
+++ b/about.html
@@ -166,20 +166,6 @@
           <div class="history-item__text">Крупнейший российский дистрибьютор ProAV-оборудования и эксперт на рынке мультимедийных решений</div>
         </div>
       </div>
-
-
-
-      <br>
-      <br>
-        <h2>
-          <a href="/history.html">История</a>
-        </h2>
-      <br>
-      <br>
-
-
-
-      
     </div>
   </div>
 
@@ -211,21 +197,31 @@
           <div class="faces-item__position">Руководитель</div>
           <div class="faces-item__filter"></div>
         </div>
+        <div class="faces-item">
+          <div class="faces-item__photo">
+            <img src="/images/faces-photo.jpg" alt="">
+          </div>
+          <div class="faces-item__name">Александр <br>Марченко</div>
+          <div class="faces-item__position">Руководитель</div>
+          <div class="faces-item__filter"></div>
+        </div>
+        <div class="faces-item">
+          <div class="faces-item__photo">
+            <img src="/images/faces-photo.jpg" alt="">
+          </div>
+          <div class="faces-item__name">Александр <br>Марченко</div>
+          <div class="faces-item__position">Руководитель</div>
+          <div class="faces-item__filter"></div>
+        </div>
+        <div class="faces-item">
+          <div class="faces-item__photo">
+            <img src="/images/faces-photo.jpg" alt="">
+          </div>
+          <div class="faces-item__name">Александр <br>Марченко</div>
+          <div class="faces-item__position">Руководитель</div>
+          <div class="faces-item__filter"></div>
+        </div>
       </div>
-
-
-
-      <br>
-      <br>
-        <h2>
-          <a href="/faces.html">Лица компании</a>
-        </h2>
-      <br>
-      <br>
-      
-
-
-
     </div>
   </div>
 
