--- a/category.html
+++ b/category.html
@@ -84,7 +84,7 @@
           <a href="#" class="subcategories-item">Со встроенным компьютером</a>
         </div>
 
-        <div id="filter-menu-btn" class="filter-menu-btn hidden-desktop">Фильтры</div>
+        <div id="filter-menu-btn" class="filter-menu-btn">Фильтры</div>
 
         <div class="products">
 
