--- a/agreement.html
+++ b/agreement.html
@@ -1,5 +1,15 @@
 <!--#include virtual="/parts/header.html" -->
 
+<div class="breadcrumbs">
+  <div class="container">
+    <div class="parent">
+      <a href="/">Главная</a>
+    </div>
+    <div class="separator">/</div>
+    <div class="active">Согласие на обработку персональных данных</div>
+  </div>
+</div>
+
 <div class="container">
   <div class="page-title">Согласие на обработку персональных данных</div>
   <p>Настоящим свободно, своей волей и в своем интересе даю согласие ООО "Экопро" ИНН 000000000000 ОГРН 000000000000000 от 2 марта 2021г Юридический адрес Москвовская область, город Москва, ул. Ленина 99 (далее – Оператор), на автоматизированную обработку моих персональных данных, в соответствии со следующим перечнем:</p>
@@ -7,7 +17,7 @@
     <li>фамилия, имя и условия заказа в случае заполнения мною любых форм на Сайте Оператора, номер телефона, электронная почта;</li>
     <li>данные о наименовании моего сайта или сайта моей компании, название моего юридического лица или название моей компании;</li>
     <li>данные об образовании, моем городе проживания, стаже и предыдущем месте работы, возрасте и дате рождения, если я заполняю анкету кандидата на какую-либо должность Оператора;</li>
-    <li>источник захода на сайт https://es-av.ru  (далее – Сайт Оператора) и информация поискового или рекламного запроса;</li>
+    <li>источник захода на сайт https://es-av.ru (далее – Сайт Оператора) и информация поискового или рекламного запроса;</li>
     <li>данные о пользовательском устройстве (среди которых разрешение, версия и другие атрибуты, характеризующие пользовательское устройство);</li>
     <li>пользовательские клики, просмотры страниц, заполнения полей, показы и просмотры баннеров и видео;</li>
     <li>данные, характеризующие аудиторные сегменты;</li>
