--- a/publications.html
+++ b/publications.html
@@ -20,9 +20,9 @@
           <div class="ep-item__image">
             <img src="/images/temp-publications-image1.jpg" alt="">
           </div>
-          <div class="ep-item__date">28.02.2024</div>
-          <div class="ep-item__type hidden-mobile">Статья</div>
-          <div class="ep-item__time">20:00 мск</div>
+          <div class="enws-date ep-item__date">28.02.2024</div>
+          <div class="enws-type ep-item__type hidden-mobile">Статья</div>
+          <div class="enws-time ep-item__time">20:00 мск</div>
           <div class="image-filter"></div>
         </div>
         <div class="ep-item__content">
@@ -39,9 +39,9 @@
           <div class="ep-item__image">
             <img src="/images/temp-publications-image2.jpg" alt="">
           </div>
-          <div class="ep-item__date">28.02.2024</div>
-          <div class="ep-item__type hidden-mobile">Статья</div>
-          <div class="ep-item__time">20:00 мск</div>
+          <div class="enws-date ep-item__date">28.02.2024</div>
+          <div class="enws-type ep-item__type hidden-mobile">Статья</div>
+          <div class="enws-time ep-item__time">20:00 мск</div>
           <div class="image-filter"></div>
         </div>
         <div class="ep-item__content">
@@ -58,9 +58,9 @@
           <div class="ep-item__image">
             <img src="/images/temp-publications-image3.jpg" alt="">
           </div>
-          <div class="ep-item__date">28.02.2024</div>
-          <div class="ep-item__type hidden-mobile">Статья</div>
-          <div class="ep-item__time">20:00 мск</div>
+          <div class="enws-date ep-item__date">28.02.2024</div>
+          <div class="enws-type ep-item__type hidden-mobile">Статья</div>
+          <div class="enws-time ep-item__time">20:00 мск</div>
           <div class="image-filter"></div>
         </div>
         <div class="ep-item__content">
@@ -77,9 +77,9 @@
           <div class="ep-item__image">
             <img src="/images/temp-publications-image4.jpg" alt="">
           </div>
-          <div class="ep-item__date">28.02.2024</div>
-          <div class="ep-item__type hidden-mobile">Статья</div>
-          <div class="ep-item__time">20:00 мск</div>
+          <div class="enws-date ep-item__date">28.02.2024</div>
+          <div class="enws-type ep-item__type hidden-mobile">Статья</div>
+          <div class="enws-time ep-item__time">20:00 мск</div>
           <div class="image-filter"></div>
         </div>
         <div class="ep-item__content">
@@ -96,9 +96,9 @@
           <div class="ep-item__image">
             <img src="/images/temp-publications-image5.jpg" alt="">
           </div>
-          <div class="ep-item__date">28.02.2024</div>
-          <div class="ep-item__type hidden-mobile">Статья</div>
-          <div class="ep-item__time">20:00 мск</div>
+          <div class="enws-date ep-item__date">28.02.2024</div>
+          <div class="enws-type ep-item__type hidden-mobile">Статья</div>
+          <div class="enws-time ep-item__time">20:00 мск</div>
           <div class="image-filter"></div>
         </div>
         <div class="ep-item__content">
@@ -115,9 +115,9 @@
           <div class="ep-item__image">
             <img src="/images/temp-publications-image6.jpg" alt="">
           </div>
-          <div class="ep-item__date">28.02.2024</div>
-          <div class="ep-item__type hidden-mobile">Статья</div>
-          <div class="ep-item__time">20:00 мск</div>
+          <div class="enws-date ep-item__date">28.02.2024</div>
+          <div class="enws-type ep-item__type hidden-mobile">Статья</div>
+          <div class="enws-time ep-item__time">20:00 мск</div>
           <div class="image-filter"></div>
         </div>
         <div class="ep-item__content">
